[tool.poetry]
name = "MeowSchool"
version = "0.2.0"
description = ""
authors = ["mironovmeow <71277890+mironovmeow@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
vkbottle = "^4.2.1"
APScheduler = "^3.9.1"
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.34" }
aiosqlite = "^0.17.0"
loguru = "^0.6.0"
barsdiary = { extras = ["async"], version = "^0.1.1" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
isort = "^5.0"
flake8 = "^4.0.1"
mypy = "^0.941"

[tool.isort]
line_length = 99
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
warn_unused_configs = true

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
